[metadata]
name = local_bump
author = Shane Ramey
author-email = shane.ramey@gmail.com
maintainer-email = shane.ramey@gmail.com
summary = Kubernetes Helm Chart version modifier
home-page = https://github.com/shaneramey/helm-local-bump
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Topic :: System :: Deployment
        Topic :: Utilities
requires-dist =
    docopt
    ruamel.yaml
keywords = Kubernetes Helm Chart Bump

[files]
packages =
    local_bump

[entry_points]
console_scripts =
     local_bump = local_bump.main:main
